<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">REWMobile</string>
    <string name="action_settings">Configuracion</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_acceso">REWMobile</string>
    <string name="title_activity_fragment_mesas">Mesas</string>
    <string name="title_section1">Salon 1</string>
    <string name="title_section2">Salon 2</string>
    <string name="title_section3">Salon 3</string>
    <string name="text_estatus">Cargando</string>
    <string name="title_activity_pedido">PedidoActivity</string>
    <string name="action_enviar">Enviar</string>
    <string name="action_precuenta">Precuenta</string>
    <string name="action_search">Buscar Producto</string>
    <string name="lbl_conexion">Conexion</string>
    <string name="lbl_host">Host</string>
    <string name="lbl_host_default">192.168.0.10</string>
    <string name="lbl_host_port">Puerto</string>
    <string name="lbl_host_port_default">80</string>
    <string name="lbl_host_path">Ruta</string>
    <string name="lbl_host_path_default">rewservices</string>
    <string name="action_salir">Salir</string>
    <string name="btn_reintentar">Reintentar</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_mesas_refresh">Actualizar Mesas</string>
    <string name="action_mesas_ocupadas">Ocupadas</string>
    <string name="action_mesas_libres">Libres</string>
    <string name="action_mesas_todas">Todas</string>
    <string name="header_producto">PRODUCTO</string>
    <string name="header_cantidad">CANT.</string>
    <string name="header_unitario">UNIT.</string>
    <string name="header_total">TOTAL</string>
    <string name="footer_total">TOTAL S/.</string>
    <string name="appName">SwipeListView Demo</string>
    <string name="open">Open</string>
    <string name="googlePlay">Google Play</string>
    <string name="uninstall">Uninstall</string>
    <string name="cantOpen">Can\'t open this application</string>
    <string name="settings">Settings</string>
    <string name="mode">Swipe Mode</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="both">Both</string>
    <string name="leftAction">Left Action</string>
    <string name="reveal">Reveal</string>
    <string name="dismiss">Dismiss</string>
    <string name="choice">Choice</string>
    <string name="rightAction">Right Action</string>
    <string name="rightOffset">Right Offset (%1$s dp)</string>
    <string name="leftOffset">Left Offset (%1$s dp)</string>
    <string name="dp">dp</string>
    <string name="animationTime">Animation Time (Default: 0)</string>
    <string name="milliseconds">Milliseconds</string>
    <string name="openOnLongPress">Open On Long Press</string>
    <string name="about">About</string>
    <string name="aboutMessage">This is just a simple demo for the Open Source SwipeListView Android Library by 47 Degrees. Find all source, documentation and packaged downloads at GitHub. Cheers!</string>
    <string name="ok">OK</string>
    <string name="aceptar">ACEPTAR</string>
    <string name="cancelar">CANCELAR</string>
    <string name="eliminar">ELIMINAR</string>
    <string name="editar">EDITAR</string>
    <string name="cerrar">CERRAR</string>
    <string name="si">SI</string>
    <string name="no">NO</string>
    <string name="visit47">Visit 47deg</string>
    <string name="goToGitHub">Go to GitHub</string>
    <string name="dontShow">Don\'t show this message again</string>
    <string name="others">Others</string>
    <string name="loading">Loading</string>
    <string name="newTag">New!</string>
    <string name="discard">Discard</string>
    <string name="password">Contraseña</string>
    <string name="guion">|</string>
    <string name="recargar_productos">Recargar Productos</string>
    <string name="procesando">Procesando</string>
    <string name="lbl_mesa_nro">Mesa No.</string>
    <string name="lbl_cantidad">Cantidad</string>
    <string name="lbl_producto">Producto</string>
    <string name="lbl_mensaje">Mensaje</string>
    <string name="action_pagar">Pagar</string>
    <string name="title_activity_pagar">Pagar Cuenta</string>
    <string name="lbl_ruc">RUC</string>
    <string name="lbl_nombre_razon">Nombre/Razon Social</string>
    <string name="lbl_direccion">Direccion</string>
    <string name="text_pagar">Pagar</string>
    <string name="text_buscar">Buscar</string>
    <string name="simbolo_soles">S/.</string>
    <string name="simbolo_dolares">$.</string>
    <string name="simbolo_tarjeta">T.</string>
    <string name="lbl_monto_pagar">Monto a Pagar</string>
    <string name="lbl_valor_0">S/. 0.00</string>
    <string name="lbl_pago">Pago</string>
    <string name="lbl_resta">Resta</string>
    <string name="lbl_vuelto">Vuelto</string>
    <string name="lbl_pagar">Pagar</string>
    <string name="lbl_empresa">Empresa</string>
    <string name="lbl_empresa_default">EMPRESA SA</string>
    <string name="lbl_distrito">Distrito</string>
    <string name="lbl_comprobantes">Comprobantes</string>
    <string name="lbl_serie_b">Serie Boleta</string>
    <string name="lbl_numero_b">Numero Boleta</string>
    <string name="lbl_serie_f">Serie Factura</string>
    <string name="lbl_numero_f">Numero Factura</string>
    <string name="lbl_impresoras">Impresoras</string>
    <string name="lbl_impresora_p">Impresora Precuenta</string>
    <string name="lbl_impresora_b">Impresora Boleta</string>
    <string name="lbl_impresora_f">Impresora Factura</string>
    <string name="lbl_nombre">Nombre</string>
    <string name="mnu_recargar_datos">Recargar Datos</string>
    <string name="lbl_mozo">Mozo</string>
    <string name="lbl_cargando">Cargando...</string>
    <string name="lbl_pax">Pax</string>
    <string name="numero_uno">1</string>
    <string name="lbl_sinmozo_pax1">Sin Mozo - 1 Pax</string>
    <string name="lbl_ruc_dni">RUC/DNI</string>
    <string name="lbl_buscar">Buscar</string>
    <string name="lbl_departamento">Departamento</string>
    <string name="lbl_provincia">Provincia</string>
    <string name="lbl_servicio">Servicio</string>
    <string name="lbl_dia">Dia</string>
    <string name="lbl_neto">NETO</string>
    <string name="lbl_00">0.00</string>
    <string name="lbl_igv">IGV</string>
    <string name="lbl_serv">SERV.</string>
    <string name="lbl_total">TOTAL</string>
    <string name="lbl_ruc_0">00000000000</string>
    <string name="lbl_empresa_sac">EMPRESA SAC</string>
    <string name="lbl_x">X</string>
    <string name="lbl_num_1">1</string>
    <string name="lbl_num_2">2</string>
    <string name="lbl_num_3">3</string>
    <string name="lbl_num_4">4</string>
    <string name="lbl_num_5">5</string>
    <string name="lbl_num_6">6</string>
    <string name="lbl_num_7">7</string>
    <string name="lbl_num_8">8</string>
    <string name="lbl_num_9">9</string>
    <string name="lbl_num_0">0</string>
    <string name="lbl_num_c">C</string>

</resources>
