<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item 
        android:id="@+id/action_enviar"
        android:orderInCategory="1"
        android:showAsAction="never" 
        android:title="@string/action_enviar" />
    <item
        android:id="@+id/action_precuenta"
        android:orderInCategory="2"
        android:showAsAction="never"
        android:title="@string/action_precuenta" />
    <item 
        android:id="@+id/action_mozo_pax"
        android:title="@string/lbl_sinmozo_pax1"
        android:showAsAction="ifRoom"
        android:visible="false" />
    <item 
        android:id="@+id/lbl_action_servicio"
        android:title="@string/lbl_servicio"
        android:showAsAction="ifRoom"
        android:visible="false" />
    <item 
        android:id="@+id/action_servicio"
        android:titleCondensed="@string/lbl_servicio" 
        android:title="@string/lbl_servicio"
        android:showAsAction="always|withText"
        android:actionViewClass="android.widget.Switch"
        android:visible="false" />
</menu>
