<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/lbl_neto"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/tvNeto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/lbl_00"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="10dp"
	        android:layout_weight="1"
	        android:text="@string/lbl_igv"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
	
	    <TextView
	        android:id="@+id/tvIgv"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:gravity="right"
	        android:text="@string/lbl_00"
	        android:textAppearance="?android:attr/textAppearanceLarge"
	        android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

	    <TextView
	        android:id="@+id/tvServData"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="10dp"
	        android:layout_weight="1"
	        android:text="@string/lbl_serv"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
	
	    <TextView
	        android:id="@+id/tvServ"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:gravity="right"
	        android:text="@string/lbl_00"
	        android:textAppearance="?android:attr/textAppearanceLarge"
	        android:textStyle="bold" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="10dp"
	        android:layout_weight="1"
	        android:text="@string/lbl_total"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
	
	    <TextView
	        android:id="@+id/tvTotal"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:gravity="right"
	        android:text="@string/lbl_00"
	        android:textAppearance="?android:attr/textAppearanceLarge"
	        android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>