<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:swipe="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout_pagar"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@android:color/holo_green_light"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/TextView02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_monto_pagar"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/tvMontoPagar"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/lbl_valor_0"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="70sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@android:color/holo_blue_light"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_pago"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/tvPago"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/lbl_valor_0"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="60sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:baselineAligned="false" >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/holo_red_light"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_resta"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textSize="30sp" />

                    <TextView
                        android:id="@+id/tvResta"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/lbl_valor_0"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textSize="60sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/holo_orange_dark"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_vuelto"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textSize="30sp" />

                    <TextView
                        android:id="@+id/tvVuelto"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/lbl_valor_0"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textSize="60sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tvRucAction"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:background="@android:color/holo_green_dark"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/lbl_ruc"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="60sp" />

                <TextView
                    android:id="@+id/tvRuc"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@android:color/holo_green_dark"
                    android:gravity="center_vertical|center_horizontal"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="00000000000" />

                <TextView
                    android:id="@+id/tvRazonSocial"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:background="@android:color/holo_green_dark"
                    android:gravity="center_vertical|center_horizontal"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="EMPRESA SAC" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/holo_blue_bright"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/simbolo_soles"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="60sp" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/holo_blue_dark"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/simbolo_dolares"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="60sp" />
            </LinearLayout>

            <!-- <TextView
                android:id="@+id/tvPagar"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@android:color/holo_purple"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/lbl_pagar"
                android:textSize="60sp" />  -->

            <TextView
                android:id="@+id/btnPagar"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@android:color/holo_purple"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/lbl_pagar"
                android:textSize="60sp" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_blue_dark" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="3dp"
                android:text="@string/header_producto"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@drawable/text_color" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:minWidth="80dp"
                android:text="@string/header_cantidad"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@drawable/text_color" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:minWidth="110dp"
                android:text="@string/header_unitario"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@drawable/text_color" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:minWidth="130dp"
                android:paddingRight="3dp"
                android:text="@string/header_total"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@drawable/text_color" />
        </LinearLayout>

        <ListView
            android:id="@+id/listViewPedido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</android.support.v4.widget.DrawerLayout>